[package]
name = "nes_emu"
version = "0.1.0"
authors = ["Seth Pyle <seth.pyle86@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"